objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>FinServ__IncludeInGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes this account in a related individual&apos;s primary group</description>
        <label>Include in Primary Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a person&apos;s primary group</description>
        <label>Primary Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the primary member of a group</description>
        <label>Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Rollups__c</fullName>
        <label>Roll-Ups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Financial Accounts</fullName>
                </value>
                <value>
                    <fullName>Assets and Liabilities</fullName>
                </value>
                <value>
                    <fullName>Financial Goals</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>